#18 fixed registration overflow

--- a/src/blocks/sign-up/sign-up.scss
+++ b/src/blocks/sign-up/sign-up.scss
@@ -64,6 +64,7 @@
     max-width: 22.8571rem;
     width: 100%;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
   }
 
@@ -76,7 +77,8 @@
   }
 
   &__sign-in-button {
-    max-width: 7.0714rem;
+    min-width: 7.0714rem;
+    max-width: fit-content;
     width: 100%;
   }
 }
